update ingress dependa

--- a/kubernetes/apps/ingress-nginx/ks.yaml
+++ b/kubernetes/apps/ingress-nginx/ks.yaml
@@ -9,4 +9,5 @@ metadata:
 spec:
   targetNamespace: ingress-nginx
   path: ./kubernetes/apps/ingress-nginx/app
-  dependsOn: []
+  dependsOn:
+    - name: apps-cert-manager-issuers
